# set_transformer

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  main_pointcloud.py  mixture_of_mvns.py  models.py  mujoco-py.patch  mvn_diag.py  plots.py  pyproject.toml  run.py  todo.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
configs/: 10x10.yml  2x1.yml  2x2.yml  3x2.yml  3x2x1.yml  3x3.yml  4.yml  4x3-test.yml  4x3.yml  4x3[:10].yml  4x3x2.yml  4x3x2[:12]-test.yml  4x3x2[:12].yml  4x3x2[:6]-test.yml  4x3x2[:6].yml  4x4.yml  5x5.yml  absorbing.yml  base.yml  baseline-absorbing.yml  baseline.yml  conservative-loss.yml  cql.yml  debug-neural.yml  delta-100.yml  delta-2.yml  grid-size-3-absorbing.yml  grid-size-3-baseline.yml  grid-size-3.yml  grid-size-4.yml  grid-size-5.yml  grid-size-6.yml  grid-world-ppo.yml  grid-world.yml  maze.yml  miniworld.yml  omit-states-actions.yml  one-room.yml  partial-observation.yml  policy-improvement-values.yml  (+7 more)
configs/conditional/: base.yml  debug-neural.yml  trajectories.yml
configs/omit-states-actions/: base.yml
configs/ppo/: base.yml  debug.yml  grid-world.yml  half-cheetah.yml  maze.yml  miniworld.yml  one-room.yml  pickup.yml  sequence.yml
configs/tabular/: base.yml  cross-product.yml  trajectories.yml
src/: artifacts.py  config.py  data.py  data_modelnet40.py  discretization.py  evaluate.py  main.py  main_ppo.py  metrics.py  mixture_of_mvns.py  models.py  modules.py  mvn_diag.py  param_space.py  pretty.py  run.py  train.py  utils.py
(+125 files in other folders)
