[tool.poetry]
name = "icvi"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "1.13.1"
matplotlib = "^3.7.1"
imageio = "^2.26.1"
mujoco-py = "^2.0.2.10"
seaborn = "^0.12.2"
wandb = "^0.14.1"
ray = { version = ">=2.3.1,<2.8.0", extras = ["tune"] }
mujoco = "^2.3.5"
gitpython = "^3.1.31"
rich = "^13.4.2"
tqdm = "^4.66.1"
dollar-lambda = "^1.1.4"
omegaconf = "^2.3.0"
transformers = "^4.34.1"
pandas = "^2.1.3"
miniworld = "^2.0.0"
gym = "^0.26.2"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"
mypy = "^0.971"
flake8 = "^5.0.4"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src/**/*.py"]

[tool.vulture]
ignore_decorators = ["@tree.command", "@tree.subcommand"]
ignore_names = ['daemon']
paths = ["src"]
